@@ -2201,6 +2201,17 @@
       </component>
     </version>
   </module>
+  <module name="netapplet">
+    <version release="gnome-2.8">
+      <component name="netapplet" dir="netapplet" group="extras">
+	<podir dir="po"/>
+	<potname name="netapplet.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="planner">
     <version release="gnome-2.8">
       <component name="planner" dir="planner" group="office">
