@@ -1,3 +1,7 @@
+2004-08-25  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added netapplet to extras.
+
 2004-08-20  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Removed radioactive. Maintainer
